bug #22451 (Partitions: duplicating results with ENGINE=FEDERATED)

As presently PARTITIONS + FEDERATED just doesn't work i added error message
to inform user about that.
Should be enabled again after releted WL's completion.